--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -17,9 +17,6 @@
         <header>
             <nav>
                 <h1>Title</h1>
-                <div class="logo">
-                    <img src="https://api.logomaster.ai/logo-template-preview/preview-template-10038.svg" alt="">
-                </div>
                 <ul>
                     <li>
                         <a href="#">Início</a>
@@ -36,8 +33,13 @@
 
         <content>
             <div class="content">
+                <section class="banner-tp-1">
+                    <img src="../public/images/1375x520.png" alt="">
+                </section>
 
                 <section class="product-presentation">
+                    <button class="scroll-back"><</button>
+
                     <div class="product-content">
                         <div class="new-tag"></div>
                         <div class="product-image">
@@ -108,6 +110,170 @@
                             </div>
                         </div>
                     </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="scroll-next">></button>
                 </section>
 
                 <section>
@@ -161,4 +327,5 @@
 
     </body>
     <script src="../public/accordion/js/accordion.js"></script>
+    <script src="../public/js/base.js"></script>
 </html>
