--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -5,10 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="../public/css/base.css">
         <link rel="stylesheet" href="../public/accordion/css/accordion.css">
+
         <title>Document</title>
     </head>
 
@@ -33,12 +37,24 @@
 
         <content>
             <div class="content">
-                <section class="banner-tp-1">
-                    <img src="../public/images/1375x520.png" alt="">
+                <section class="banner banner-tp-1">
+                    <div class="prev-image">
+                        <button type="button"><</button>
+                    </div>
+                    <div class="banner-image image-full-content">
+                        <img class="active" src="../public/images/1375x520.png" alt="">
+                    </div>
+
+                    <div class="banner-image image-available-content">
+                        <img src="../public/images/1375x520.png" alt="">
+                    </div>
+                    <div class="next-image">
+                        <button type="button">></button>
+                    </div>
                 </section>
 
                 <section class="product-presentation">
-                    <button class="scroll-back"><</button>
+                    <button class="scroll-back" type="button"><</button>
 
                     <div class="product-content">
                         <div class="new-tag"></div>
@@ -110,150 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="product-content">
-                        <div class="new-tag">
 
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product-content">
-                        <div class="new-tag">
-
-                        </div>
-                        <div class="product-image">
-                            <a href="#">
-                                <img src="../public/images/480x480.png" alt="">
-                            </a>
-                        </div>
-                        <div class="product-details">
-                            <a href="#" class="name">
-                                Product
-                            </a>
-                            <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
-                            </div>
-                        </div>
-                    </div>
                     <div class="product-content">
                         <div class="new-tag">
 
@@ -273,7 +146,159 @@
                         </div>
                     </div>
 
-                    <button class="scroll-next">></button>
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class="scroll-next" type="button">></button>
                 </section>
 
                 <section>
@@ -326,6 +351,9 @@
         </footer>
 
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
     <script src="../public/accordion/js/accordion.js"></script>
     <script src="../public/js/base.js"></script>
 </html>
