--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -41,13 +41,19 @@
                     <div class="prev-image">
                         <button type="button"><</button>
                     </div>
+
                     <div class="banner-image image-full-content">
-                        <img class="active" src="../public/images/1375x520.png" alt="">
+                        <img class="active" src="../public/images/480x480.png" alt="">
+                    </div>
+
+                    <div class="banner-image image-full-content">
+                        <img src="../public/images/1375x520.png" alt="">
                     </div>
 
                     <div class="banner-image image-available-content">
                         <img src="../public/images/1375x520.png" alt="">
                     </div>
+
                     <div class="next-image">
                         <button type="button">></button>
                     </div>
