--- a/layout_2/public/css/base.css
+++ b/layout_2/public/css/base.css
@@ -74,7 +74,7 @@ content .content{
 
 .banner{
     width: 100vw;
-    height: 350px;
+    height: 450px;
     margin-left: -5.59%;
     margin-bottom: 25px;
 }
@@ -95,12 +95,12 @@ content .content{
 }
 
 .banner .prev-image{
-    top: 44.5%;
+    top: 285px;
     left: 20px;
 }
 
 .banner .next-image{
-    top: 44.5%;
+    top: 285px;
     right: 20px;
 }
 
@@ -128,10 +128,6 @@ content .content{
     opacity: 0 !important;
 }
 
-.banner-tp-1{
-    height: 450px;
-}
-
 .banner-tp-1 .banner-image img{
     display: none;
     transition: 0.3s opacity;
@@ -143,7 +139,7 @@ content .content{
 }
 
 .banner-tp-1 .image-full-content, .banner-tp-1 .image-available-content{
-    height: 67.5%;
+    height: 450px;
     width: 100%;
     position: absolute;
 }
