FE - Correções de layout

--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-Br">
 
     <head>
         <meta charset="UTF-8">
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="../public/css/base.css">
         <link rel="stylesheet" href="../public/accordion/css/accordion.css">
 
-        <title>Document</title>
+        <title>Front-End</title>
     </head>
 
     <body>
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="banner-image image-full-content">
-                        <img class="active" src="../public/images/480x480.png" alt="">
+                        <img src="../public/images/480x480.png" alt="">
                     </div>
 
                     <div class="banner-image image-full-content">
@@ -59,7 +59,7 @@
                     </div>
                 </section>
 
-                <section class="product-presentation">
+                <section class="adjust-section-width product-presentation">
                     <button class="scroll-back" type="button"><</button>
 
                     <div class="product-content">
@@ -128,7 +128,7 @@
                                 Product
                             </a>
                             <div class="price">
-                                <p class="actual-price">R$ 119,90</p>
+                                <p class="actual-price">R$ 89,90</p>
                             </div>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                     <button class="scroll-next" type="button">></button>
                 </section>
 
-                <section>
+                <section class="adjust-section-width">
                     <div class="accordion accordion-tp-1">
                         <div class="accordion-title">
                             <h3>Teste</h3>
