--- a/layout_2/public/css/base.css
+++ b/layout_2/public/css/base.css
@@ -1,3 +1,7 @@
+/**
+* @media query resizes: 320px, 480px, 600px, 767px, 900px, 1024px and 1200px.
+ */
+
 *{
     margin: 0;
     padding: 0;
@@ -67,21 +71,20 @@ content{
     overflow-x: hidden;
 }
 
-content .content{
-    margin: auto;
+.adjust-section-width{
     width: 90%;
+    margin: 0 auto 35px auto;
 }
 
 .banner{
-    width: 100vw;
+    width: 100%;
     height: 450px;
-    margin-left: -5.59%;
     margin-bottom: 25px;
 }
 
 .banner .prev-image, .banner .next-image{
     z-index: +1;
-    position: absolute;
+    position: relative;
 }
 
 .banner .prev-image button, .banner .next-image button{
@@ -95,13 +98,15 @@ content .content{
 }
 
 .banner .prev-image{
-    top: 285px;
+    top: 200px;
     left: 20px;
+    float: left;
 }
 
 .banner .next-image{
-    top: 285px;
+    top: 200px;
     right: 20px;
+    float: right;
 }
 
 .banner:hover .prev-image, .banner:hover .next-image{
@@ -122,18 +127,7 @@ content .content{
     outline: none;
 }
 
-.banner .banner-image img[class*="prepare-rm-change"]{
-    display: block;
-    transition: 1s opacity !important;
-    opacity: 0 !important;
-}
-
-.banner-tp-1 .banner-image img{
-    display: none;
-    transition: 0.3s opacity;
-}
-
-.banner-tp-1 .banner-image img[class*="active"]{
+.banner-tp-1 .banner-image img[class~="active"]{
     display: block;
     opacity: 1;
 }
@@ -149,6 +143,7 @@ content .content{
     height: 100%;
     object-fit: cover;
     opacity: 0;
+    transition: 0.5s all;
 }
 
 .banner-tp-1 .image-available-content img{
@@ -156,6 +151,7 @@ content .content{
     height: 100%;
     object-fit: contain;
     opacity: 0;
+    transition: 0.5s all;
 }
 
 .product-presentation{
@@ -165,7 +161,6 @@ content .content{
     align-items: center;
     overflow-y: auto;
     scroll-behavior: smooth;
-    margin-bottom: 35px;
     padding: 5px;
 }
 
@@ -247,15 +242,22 @@ content .content{
     background: transparent;
 }
 
-.product-content{
+.product-presentation .product-content{
     box-shadow: inset #949494 0 0 5px 0;
     min-width: 265px;
     height: 380px;
     margin: 0 20px;
     border-radius: 15px;
+    border: 2px solid #fff;
+    transition: 0.5s linear all;
 }
 
-.product-content .new-tag{
+.product-presentation .product-content:hover{
+    border-color: #ffbf00;
+    box-shadow: #949494 0 0 5px 0;
+}
+
+.product-presentation .product-content .new-tag{
     position: absolute;
     display: none;
     margin-top: 15px;
@@ -266,35 +268,36 @@ content .content{
     color: #ffffff;
 }
 
-.product-content .product-image img{
+.product-presentation .product-content .product-image img{
     object-fit: cover;
     width: 100%;
     height: 280px;
     border-radius: 13px 13px 0 0;
+    transition: 1s linear all;
 }
 
-.product-content .product-details{
+.product-presentation .product-content .product-details{
     padding: 20px;
 }
 
-.product-content .product-details a{
+.product-presentation .product-content .product-details a{
     text-decoration: none;
     color: #000000;
     margin-bottom: 20px;
     display: block;
 }
 
-.product-content .product-details .price .dashed-price{
+.product-presentation .product-content .product-details .price .dashed-price{
     text-decoration: line-through;
     color: #707070;
     display: inline;
 }
 
-.product-content .product-details .price .actual-price {
+.product-presentation .product-content .product-details .price .actual-price {
     display: inline;
 }
 
-.product-content .product-details .price .percentage-off {
+.product-presentation .product-content .product-details .price .percentage-off {
     background-color: #ff0000;
     border-radius: 10px;
     display: inline;
@@ -320,3 +323,4 @@ footer .footer-header .title{
 footer .footer-content{
     padding: 25px;
 }
+
